Fixing. Operations column aligning

--- a/mkApi/mkWeb/styles/pages/_pages.less
+++ b/mkApi/mkWeb/styles/pages/_pages.less
@@ -1,2 +1,7 @@
 @import 'categories/_categories.less';
 @import 'transactions/_transactions.less';
+
+.actions-column {
+  text-align: right;
+  width: 90px;
+}
