--- a/mkApi/mkWeb/styles/pages/categories/_categories.less
+++ b/mkApi/mkWeb/styles/pages/categories/_categories.less
@@ -6,9 +6,4 @@
     .category-income-column {
         text-align: center;
     }
-
-    .category-actions-column {
-        text-align: right;
-        width: 90px;
-    }
 }
